--- a/index.html
+++ b/index.html
@@ -57,6 +57,21 @@
             <h1>Reported posts</h1>
         </div>
     </main>
+    <section class="q-and-a container">
+        <hr>
+        <h4>Q-1:How does javascript work?</h4>
+        <h5>সহজ ভাষায় বলতে গেলে জাভাস্ক্রিপ্ট হলো একটি interpreted language. C++ অথবা java এর মত এটি compiled language
+            নয়। compiled language সরাসরি machine code এ converted করা থাকে যেটি প্রসেসর execute করতে পারে। interpreted
+            language এ কোড line by line execute করা হয়। javascript একটি interpreted language অর্থাৎ javascript এ কোড
+            line by line execute হয়। javascript হলো একটি single threaded এবং single concurrent programming language.
+            javascript হলো asynchronous programming language. asynchronous programming দ্রুত execution এর জন্য ভালো।
+            এছাড়াও javascript কে lightweight programming language ও বলা হয়।
+        </h5>
+        <hr>
+        <h4>Q-2:What is the differences between Local Storage & Session Storage?</h4>
+        <h45></h45>
+
+    </section>
     <footer></footer>
 
     <!-- add javascript  file  -->
