--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <h1>Reported posts</h1>
         </div>
     </main>
-    <section class="q-and-a container">
+    <section id="q-and-a" class=" container">
         <hr>
         <h4>Q-1:How does javascript work?</h4>
         <h5>সহজ ভাষায় বলতে গেলে জাভাস্ক্রিপ্ট হলো একটি interpreted language. C++ অথবা java এর মত এটি compiled language
@@ -69,7 +69,16 @@
         </h5>
         <hr>
         <h4>Q-2:What is the differences between Local Storage & Session Storage?</h4>
-        <h45></h45>
+        <h5>
+            <li> Local storage হলো javascript site এ কোন ডেটা কে key-value pair হিসেবে সংরক্ষন করা, যেটি browser বন্ধ
+                করে দিলেও browser এ থেকে যায়। </li>
+            <li>Session storage এ ডেটা name-value ভাবে save করা থাকে। Session storage এর ডেটা কিন্তু Local storage এর
+                মত browser বন্ধ করে দিলেও saved থাকেনা, ডেটা মুছে যায়। </li>
+            <li> Local storage এর accessibility হলো যে কোন window. </li>
+            <li>Session storage এর accessibility হলো same tab. </li>
+            <li>Local storage এর ডেটা expiry থেকে যায়। </li>
+            <li>Session storage এর ডেটা tab close করলেই মুছে যায়। </li>
+        </h5>
 
     </section>
     <footer></footer>
