--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 মত browser বন্ধ করে দিলেও saved থাকেনা, ডেটা মুছে যায়। </li>
             <li> Local storage এর accessibility হলো যে কোন window. </li>
             <li>Session storage এর accessibility হলো same tab. </li>
-            <li>Local storage এর ডেটা expiry থেকে যায়। </li>
+            <li>Local storage এর ডেটা tab close করলেও থেকে যায়। </li>
             <li>Session storage এর ডেটা tab close করলেই মুছে যায়। </li>
         </h5>
 
