very final commit

--- a/index.html
+++ b/index.html
@@ -61,17 +61,17 @@
         <hr>
         <h3 class="text-center">Q&A</h3>
         <h4>Q-1:How does javascript work?</h4>
-        <h5>সহজ ভাষায় বলতে গেলে জাভাস্ক্রিপ্ট হলো একটি interpreted language. C++ অথবা java এর মত এটি compiled language
+        <p>সহজ ভাষায় বলতে গেলে জাভাস্ক্রিপ্ট হলো একটি interpreted language. C++ অথবা java এর মত এটি compiled language
             নয়। compiled language সরাসরি machine code এ converted করা থাকে যেটি প্রসেসর execute করতে পারে। interpreted
             language এ কোড line by line execute করা হয়। javascript একটি interpreted language অর্থাৎ javascript এ কোড
             line by line execute হয়। যখন browser page load করে তখন browser এর built-in interpreter কোডটি run করায়।
             javascript হলো একটি single threaded এবং single concurrent programming language.
             javascript হলো asynchronous programming language. asynchronous programming দ্রুত execution এর জন্য ভালো।
             এছাড়াও javascript কে lightweight programming language ও বলা হয়।
-        </h5>
+        </p>
         <hr>
         <h4>Q-2:What is the differences between Local Storage & Session Storage?</h4>
-        <h5>
+        <p>
             <li> Local storage হলো javascript site এ কোন ডেটা কে key-value pair হিসেবে সংরক্ষন করা, যেটি browser বন্ধ
                 করে দিলেও browser এ থেকে যায়। </li>
             <li>Session storage এ ডেটা name-value ভাবে save করা থাকে। Session storage এর ডেটা কিন্তু Local storage এর
@@ -80,7 +80,7 @@
             <li>Session storage এর accessibility হলো same tab. </li>
             <li>Local storage এর ডেটা tab close করলেও থেকে যায়। </li>
             <li>Session storage এর ডেটা tab close করলেই মুছে যায়। </li>
-        </h5>
+        </p>
 
     </section>
     <footer></footer>
