--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <h1>Reported posts</h1>
         </div>
     </main>
-    <section id="q-and-a" class=" container mb-5">
+    <section id="q-and-a" class=" container mb-5" style="text-align: justify;">
         <hr>
         <h3 class="text-center">Q&A</h3>
         <h4>Q-1:How does javascript work?</h4>
